# d2_automator

./: .env  .envrc  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  d2_token.txt  index.html  style.css  todo.md
resources/: .gitignore
src/: api.rs  config.rs  d2_client.rs  lib.rs  main.rs  oauth.rs
src/bungie/: mod.rs  oauth.rs
src/bungie/model/: mod.rs  response.rs  user_membership_data.rs
src/dim/: mod.rs
www/: .gitignore  index.js  package-lock.json  package.json  webpack.config.js
